# severstal_test

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: dependecy.py  exception.py  main.py
app/core/: base.py  config.py  db.py
app/handlers/: metal_roll.py
app/models/: __init__.py  metal_roll.py
app/repository/: metal_roll.py
app/schemas/: __init__.py  metal_roll.py
app/service/: metal_roll.py
migrations/: env.py
migrations/versions/: 2025_03_13_1619-85f839e5b559_create_metalroll_table.py  2025_03_13_1705-5e9f23986586_create_metalroll_table.py  2025_03_13_1845-46aa9e6e5bc6_add_metalroll_is_deleted_field.py
